--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,25 @@
-.venv/
+# Python
 __pycache__/
-*.log
-data/
-models/
-.venv
 *.pyc
-.env
-config/secrets.ini
+.python-version
+.venv/
+venv/
+
+# Notebooks
+notebook/
+*.ipynb
+
+# IDE 
+.idea/
+.vscode/
+
+# 数据文件
+data/
+*.csv
+*.pkl
+*.h5
+
+# 模型文件
+models/
+*.pt
+*.bin
