--- a/config/config_trans.json
+++ b/config/config_trans.json
@@ -28,7 +28,10 @@
       "params": {
         "max_seq_len": 100,
         "batch_size": 32,
-        "train_val_test_split": [0.7, 0.15, 0.15]
+        "train_val_test_split": [0.7, 0.15, 0.15],
+        "pad_token_id": 0,
+        "bos_token_id": 1,
+        "eos_token_id": 2
       }
     },
     "save_period": {
