--- a/config/config_BERT.json
+++ b/config/config_BERT.json
@@ -22,9 +22,10 @@
   },
   "Trainer": {
     "$comment": "config of Trainer. model, num_epoch are required.",
+    "type": "BERTTrainer",
     "num_epoch": 10,
     "dataloader": {
-      "type": "get_transformer_dataloader",
+      "type": "get_bert_dataloader",
       "params": {
         "max_seq_len": 100,
         "batch_size": 32,
