chore: training BERT

--- a/config/config_BERT.json
+++ b/config/config_BERT.json
@@ -53,7 +53,8 @@
         "num_layers": 6,
         "num_heads": 8,
         "feedforward_dim": 2048,
-        "pad_token_id": 0
+        "pad_token_id": 0,
+        "dropout": 0.1
       }
     },
     "optimizer": {
