chore: change the logging of train_acc, valid_acc, train_loss_array and valid_loss_array

--- a/config/config_BERT.json
+++ b/config/config_BERT.json
@@ -42,7 +42,7 @@
       "description": "save checkpoint every 5000 batch"
     },
     "resume": {
-      "value": true,
+      "value": false,
       "ckpt_dir": "./checkpoints/BERT/2025_8_29_15_46_19/",
       "description": "when value=true, ckpt_dir is required. an example of ckpt_dir: ./checkpoints/transformer/<folder_name>/"
     },
