--- a/config/configs/config_BERT.json
+++ b/config/configs/config_BERT.json
@@ -42,8 +42,8 @@
       "description": "save checkpoint every 5000 batch"
     },
     "resume": {
-      "value": false,
-      "ckpt_dir": "./checkpoints/BERT/2025_8_29_15_46_19/",
+      "value": true,
+      "ckpt_dir": "./checkpoints/bert/2025_8_29_23_6_20/",
       "description": "when value=true, ckpt_dir is required. an example of ckpt_dir: ./checkpoints/transformer/<folder_name>/"
     },
     "model": {
