--- a/config/configs/config.json
+++ b/config/configs/config.json
@@ -8,6 +8,7 @@
     "type": "TransformerTrainer",
     "num_epoch": 10,
     "num_tokens": 30000,
+    "max_num_ckpt": -1,
     "dataloader": {
       "type": "get_transformer_dataloader",
       "params": {
