--- a/config/configs/config.json
+++ b/config/configs/config.json
@@ -15,6 +15,8 @@
       "params": {
         "max_seq_len": 200,
         "batch_size": 64,
+        "num_workers": 8,
+        "pin_memory": true,
         "train_val_test_split": [0.7, 0.15, 0.15],
         "pad_token_id": 0,
         "bos_token_id": 1,
