perf: add amp in trainers

--- a/config/configs/config_trans.json
+++ b/config/configs/config_trans.json
@@ -25,6 +25,7 @@
     "type": "TransformerTrainer",
     "num_epoch": 10,
     "max_num_ckpt": -1,
+    "enable_amp": true,
     "dataloader": {
       "type": "get_transformer_dataloader",
       "params": {
