--- a/config/configs/config.json
+++ b/config/configs/config.json
@@ -10,6 +10,7 @@
     "num_epoch": 10,
     "num_tokens": 30000,
     "max_num_ckpt": 2,
+    "enable_amp": true,
     "dataloader": {
       "type": "get_transformer_dataloader",
       "params": {
