--- a/config/configs/config_BERT.json
+++ b/config/configs/config_BERT.json
@@ -24,6 +24,7 @@
     "type": "BERTTrainer",
     "num_epoch": 10,
     "max_num_ckpt": -1,
+    "enable_amp": true,
     "dataloader": {
       "type": "get_bert_dataloader",
       "params": {
