--- a/config/configs/config.json
+++ b/config/configs/config.json
@@ -2,7 +2,7 @@
   "$comment": "this config is for training on sagemaker without tokenizer",
   "Dataloader": {
     "$comment": "config of Dataloader. data_path is required",
-    "data_file": "en-fr_tokenized.csv"
+    "data_file": "./data/en-fr_tokenized.csv"
   },
   "Trainer": {
     "$comment": "config of Trainer. model, num_epoch are required.",
@@ -14,9 +14,9 @@
     "dataloader": {
       "type": "get_transformer_dataloader",
       "params": {
-        "max_seq_len": 200,
+        "max_seq_len": 100,
         "batch_size": 64,
-        "num_workers": 8,
+        "num_workers": 4,
         "pin_memory": true,
         "train_val_test_split": [0.7, 0.15, 0.15],
         "pad_token_id": 0,
@@ -25,7 +25,7 @@
       }
     },
     "save_period": {
-      "value": 500,
+      "value": 100,
       "description": "save checkpoint every 500 batch"
     },
     "resume": {
