--- a/config/configs/config_BERT.json
+++ b/config/configs/config_BERT.json
@@ -1,9 +1,7 @@
 {
   "Tokenizer": {
-    "$comment": "config of Tokenizer. vocab_size, src_tokenizer_regex, tgt_tokenizer_regex are required",
     "type": "WordPiece",
     "load": {
-      "$comment": "key value is for load tokenizer from local file or train a new one. key dir is the directory to load tokenizer from or save tokenizer to ",
       "value": true,
       "dir": "./trained_tokenizer/BERT"
     },
@@ -15,22 +13,20 @@
     "sample_size": 0.2
   },
   "Dataloader": {
-    "$comment": "config of Dataloader. data_path is required",
     "data_file": "./data/test.parquet",
     "allowed_chars": ""
   },
   "Trainer": {
-    "$comment": "config of Trainer. model, num_epoch are required.",
     "type": "BERTTrainer",
     "num_epoch": 10,
-    "max_num_ckpt": -1,
+    "max_num_ckpt": 2,
     "enable_amp": true,
     "dataloader": {
       "type": "get_bert_dataloader",
       "params": {
         "max_seq_len": 100,
-        "batch_size": 32,
-        "num_workers": 8,
+        "batch_size": 64,
+        "num_workers": 2,
         "pin_memory": true,
         "random_token_start": 5,
         "random_token_end": 28211,
@@ -41,14 +37,9 @@
         "train_val_test_split": [0.7, 0.15, 0.15]
       }
     },
-    "save_period": {
-      "value": 5000,
-      "description": "save checkpoint every 5000 batch"
-    },
+    "save_period": 500,
     "resume": {
-      "value": true,
-      "ckpt_dir": "./checkpoints/bert/2025_8_29_23_6_20/",
-      "description": "when value=true, ckpt_dir is required. an example of ckpt_dir: ./checkpoints/transformer/<folder_name>/"
+      "value": true
     },
     "model": {
       "type": "BERT",
