--- a/config/configs/config_trans.json
+++ b/config/configs/config_trans.json
@@ -1,9 +1,7 @@
 {
   "Tokenizer": {
-    "$comment": "config of Tokenizer. vocab_size, src_tokenizer_regex, tgt_tokenizer_regex are required",
     "type": "BPE",
     "load": {
-      "$comment": "key value is for load tokenizer from local file or train a new one. key dir is the directory to load tokenizer from or save tokenizer to ",
       "value": true,
       "dir": "./trained_tokenizer/transformer"
     },
@@ -15,37 +13,31 @@
     "sample_size": 0.2
   },
   "Dataloader": {
-    "$comment": "config of Dataloader. data_path is required",
     "data_file": "./data/en-fr.csv",
     "allowed_chars": [32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,124,160,167,169,8208,8209,8211,8212,8216,8217,8220,8221,8224,8225,8230,8240,8242,8243,8364,171,178,179,187,192,194,198,199,200,201,202,203,206,207,212,217,219,220,224,226,230,231,232,233,234,235,238,239,244,249,251,252,255,338,339,376,691,738,7496,7497,8239,8722],
-    "nrows": 5000000
+    "nrows": 1000000
   },
   "Trainer": {
-    "$comment": "config of Trainer. model, num_epoch are required.",
     "type": "TransformerTrainer",
     "num_epoch": 10,
-    "max_num_ckpt": -1,
+    "max_num_ckpt": 2,
     "enable_amp": true,
+    "save_period": 1000,
+    "resume": {
+      "value": true
+    },
     "dataloader": {
       "type": "get_transformer_dataloader",
       "params": {
         "max_seq_len": 100,
-        "batch_size": 32,
-        "num_workers": 8,
+        "batch_size": 64,
+        "num_workers": 4,
         "pin_memory": true,
         "train_val_test_split": [0.7, 0.15, 0.15],
         "pad_token_id": 0,
         "bos_token_id": 1,
         "eos_token_id": 2
       }
-    },
-    "save_period": {
-      "value": 5000,
-      "description": "save checkpoint every 5000 batch"
-    },
-    "resume": {
-      "value": false,
-      "description": "when value=true, ckpt_dir is required. an example of ckpt_dir: ./checkpoints/transformer/<folder_name>/"
     },
     "model": {
       "type": "Transformer",
