fix: TypeError: trainer.transformer_trainer.TransformerTrainer() got multiple values for keyword argument 'num_tokens'

--- a/config/configs/config.json
+++ b/config/configs/config.json
@@ -1,6 +1,6 @@
 {
   "DataContainer": {
-    "data_file": "./data/en-fr_5M_len200.parquet"
+    "data_file": "./data/wiki_en.parquet"
   },
   "Trainer": {
     "type": "TransformerTrainer",
